V6.4 (#152)
* feat: add updater and automatically send message when update is available

* feat: add Sentry error reporting

* feat: click on timeunit clock to directly edit

* feat: support custom time formatting in placeholder

* feat: add fallback placeholder when no time has been found (+bug when no timer available)

* feat: setup translations engine

* chore: add missing changelog section

* fix: Fix tasks being loaded twice on server startup

* fix: update language manager processing

* fix: enhance general translation

* chore: version bump

* fix: use BukkitRunnable to properly sync times

* fix: properly fallback to default when we cannot find language

* chore: update changelog